exports[`actions > modifications copyFromScenario should work 1`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > modifications copyFromScenario should work 2`] = `
Object {
  "type": "decrement outstanding requests",
}
`;

exports[`actions > modifications copyFromScenario should work 3`] = `
Object {
  "payload": Object {
    "bidirectional": false,
    "entries": Array [],
    "feed": "1",
    "name": "Test Modification",
    "routes": Array [
      "route1",
    ],
    "scenario": 2,
    "segments": Array [],
    "showOnMap": false,
    "timetables": Array [
      Object {
        "dwellTime": 10,
        "endTime": 57600,
        "friday": true,
        "headwaySecs": 900,
        "monday": true,
        "name": "Test timetable",
        "patternTrips": Array [
          "abcd",
        ],
        "saturday": false,
        "segmentSpeeds": Array [],
        "sourceTrip": "abcd",
        "startTime": 28800,
        "sunday": false,
        "thursday": true,
        "tuesday": true,
        "wednesday": true,
      },
    ],
    "trips": Array [
      "abcd",
    ],
    "type": "add-trip-pattern",
    "variants": Array [
      0,
    ],
  },
  "type": "set modification",
}
`;

exports[`actions > modifications copyFromScenario should work 4`] = `
Array [
  Object {
    "type": "increment outstanding requests",
  },
  Promise {},
]
`;

exports[`actions > modifications create should work 1`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > modifications create should work 2`] = `
Object {
  "type": "decrement outstanding requests",
}
`;

exports[`actions > modifications create should work 3`] = `
Array [
  Object {
    "payload": Object {
      "bidirectional": false,
      "entries": Array [],
      "feed": "1",
      "id": "1234",
      "name": "Test Modification",
      "routes": Array [
        "route1",
      ],
      "segments": Array [],
      "showOnMap": false,
      "timetables": Array [
        Object {
          "dwellTime": 10,
          "endTime": 57600,
          "friday": true,
          "headwaySecs": 900,
          "monday": true,
          "name": "Test timetable",
          "patternTrips": Array [
            "abcd",
          ],
          "saturday": false,
          "segmentSpeeds": Array [],
          "sourceTrip": "abcd",
          "startTime": 28800,
          "sunday": false,
          "thursday": true,
          "tuesday": true,
          "wednesday": true,
        },
      ],
      "trips": Array [
        "abcd",
      ],
      "type": "add-trip-pattern",
      "variants": Array [
        0,
      ],
    },
    "type": "set modification",
  },
  Object {
    "payload": Object {
      "args": Array [
        "/projects/1/scenarios/1/modifications/1234",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;

exports[`actions > modifications deleteModification should work 1`] = `
Object {
  "payload": "1",
  "type": "delete modification",
}
`;

exports[`actions > modifications deleteModification should work 2`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > modifications deleteModification should work 3`] = `
Array [
  Object {
    "type": "decrement outstanding requests",
  },
]
`;

exports[`actions > modifications getForScenario should work 1`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > modifications getForScenario should work 2`] = `
Object {
  "type": "decrement outstanding requests",
}
`;

exports[`actions > modifications getForScenario should work 3`] = `
Object {
  "payload": Array [
    Object {
      "bidirectional": false,
      "entries": Array [],
      "feed": "1",
      "id": "1234",
      "name": "Test Modification",
      "routes": Array [
        "route1",
      ],
      "segments": Array [],
      "showOnMap": false,
      "timetables": Array [
        Object {
          "dwellTime": 10,
          "endTime": 57600,
          "friday": true,
          "headwaySecs": 900,
          "monday": true,
          "name": "Test timetable",
          "patternTrips": Array [
            "abcd",
          ],
          "saturday": false,
          "segmentSpeeds": Array [],
          "sourceTrip": "abcd",
          "startTime": 28800,
          "sunday": false,
          "thursday": true,
          "tuesday": true,
          "wednesday": true,
        },
      ],
      "trips": Array [
        "abcd",
      ],
      "type": "add-trip-pattern",
      "variants": Array [
        0,
      ],
    },
  ],
  "type": "set modifications",
}
`;

exports[`actions > modifications getForScenario should work 4`] = `
Array [
  Object {
    "type": "increment outstanding requests",
  },
  Promise {},
]
`;

exports[`actions > modifications saveToServer should work 1`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > modifications saveToServer should work 2`] = `
Object {
  "type": "decrement outstanding requests",
}
`;

exports[`actions > modifications set should work 1`] = `
Object {
  "payload": Object {
    "bidirectional": false,
    "entries": Array [],
    "feed": "1",
    "id": "1234",
    "name": "Test Modification",
    "routes": Array [
      "route1",
    ],
    "segments": Array [],
    "showOnMap": false,
    "timetables": Array [
      Object {
        "dwellTime": 10,
        "endTime": 57600,
        "friday": true,
        "headwaySecs": 900,
        "monday": true,
        "name": "Test timetable",
        "patternTrips": Array [
          "abcd",
        ],
        "saturday": false,
        "segmentSpeeds": Array [],
        "sourceTrip": "abcd",
        "startTime": 28800,
        "sunday": false,
        "thursday": true,
        "tuesday": true,
        "wednesday": true,
      },
    ],
    "trips": Array [
      "abcd",
    ],
    "type": "add-trip-pattern",
    "variants": Array [
      0,
    ],
  },
  "type": "set modification",
}
`;

exports[`actions > modifications set should work 2`] = `
Array [
  Object {
    "type": "increment outstanding requests",
  },
  Promise {},
]
`;

exports[`actions > modifications setActive should work 1`] = `
Object {
  "type": "set active modification",
}
`;

exports[`actions > modifications setAndRetrieveData should work 1`] = `
Array [
  Object {
    "payload": Object {
      "bidirectional": false,
      "entries": Array [],
      "feed": "1",
      "id": "1234",
      "name": "Test Modification",
      "routes": Array [
        "route1",
      ],
      "segments": Array [],
      "showOnMap": false,
      "timetables": Array [
        Object {
          "dwellTime": 10,
          "endTime": 57600,
          "friday": true,
          "headwaySecs": 900,
          "monday": true,
          "name": "Test timetable",
          "patternTrips": Array [
            "abcd",
          ],
          "saturday": false,
          "segmentSpeeds": Array [],
          "sourceTrip": "abcd",
          "startTime": 28800,
          "sunday": false,
          "thursday": true,
          "tuesday": true,
          "wednesday": true,
        },
      ],
      "trips": Array [
        "abcd",
      ],
      "type": "add-trip-pattern",
      "variants": Array [
        0,
      ],
    },
    "type": "set modification",
  },
  Array [
    Object {
      "type": "increment outstanding requests",
    },
    Promise {},
  ],
]
`;

exports[`actions > modifications setAndRetrieveData should work 2`] = `
Array [
  Object {
    "type": "increment outstanding requests",
  },
  Promise {},
]
`;

exports[`actions > modifications setLocally should work 1`] = `
Object {
  "type": "set modification",
}
`;
